# NetVirtualCameraServer

./: .gitignore  .gitmodules  CMakeLists.txt  CameraArray.cpp  CameraArray.h  CameraUtil.cpp  CameraUtil.h  Exceptions.h  NPPJpegCoder.cpp  NPPJpegCoder.h  cameraControl.cpp  cameraControl.h  colormod.h  common.h  communication.cpp  communication.h  helper_cuda.h  main.cpp  notice.txt  readme.md
cuda/: CameraUtilKernel.cu  CameraUtilKernel.h  NPPJpegCoderKernel.cu  NPPJpegCoderKernel.h
